Fix action buttons in SiwG Setup CTA on mobile.

--- a/assets/sass/components/sign-in-with-google/_googlesitekit-sign-in-with-google-setup-cta-banner.scss
+++ b/assets/sass/components/sign-in-with-google/_googlesitekit-sign-in-with-google-setup-cta-banner.scss
@@ -20,6 +20,18 @@
 
 	.googlesitekit-setup-cta-banner--setup-cta-siwg {
 
+		.googlesitekit-setup-cta-banner__actions-wrapper {
+			gap: 0; // Fix buttons being one on top of another on medium mobile viewports.
+
+			@media (min-width: $width-tablet + 1 + px) {
+				gap: $grid-gap-phone;
+			}
+
+			@media (min-width: $width-desktop + 1 + px) {
+				gap: $grid-gap-desktop;
+			}
+		}
+
 		.googlesitekit-setup-cta-banner__svg-wrapper--setup-cta-siwg {
 			align-items: flex-end;
 			display: flex;
